Fixed side navbar so it does not overlap top navbar

--- a/src/Pages/JobApplication/resumePage.css
+++ b/src/Pages/JobApplication/resumePage.css
@@ -64,3 +64,6 @@ button.close {
     background-color:  #4c53af;
     color: white;
 }
+.pro-sidebar {
+    z-index: 0;
+}
